v 7.2.16
  - Strip leading slashes in blob path to resolve filenames properly (Stan Hu)

v 7.2.15
  - Handle `git blame` for files encoded in different formats (e.g. ISO-8859) (Stan Hu)

v 7.2.14
  - Ignore CRLFs in .gitmodules (Stan Hu)

v 7.2.13
  - Fix Blob#commit when pass full ref like refs/head/master

v 7.2.12
  - Improved performance of git blame

v 7.2.11
  - Fix regression in 7.2.9 causing log method to throw an exception given an unknown ref (Stan Hu)

v 7.2.10
  - Disable auto-CRLF correction for binary files (Stan Hu)

v 7.2.9
  - Optimization of file history method

v 7.2.8
  - Ignore symbolic refs that point to deleted branches (Stan Hu)

v 7.2.7
  - Order result of `Repository#commits_between` by date.
  - Include branch/tag name in archive file and dirname

v 7.2.6
  - Ignore remote/symbolic refs when creating repository's refs_hash (Stan Hu)

v 7.2.5
  - Take value of autocrlf into account when committing blobs.

v 7.2.4
  - Add Repository#enable_autocrlf method.

v 7.2.3
  - Fix Blob.commit and Blob.remove for non-master branches

v 7.2.2
  - Added Blob.remove feature

v 7.2.1
  - Fix committing blog to empty repository

v 7.2.0
  - Added Blob.commit feature

v 7.1.13
  - Update rugged to 0.22.2 to fix segfault.

v 7.1.12
  - Fix broken view when viewing history of a file that includes a path that used to be another file. (Stan Hu)

v 7.1.11
  - Fix broken view when using a tag to display a tree that contains git submodules. (Stan Hu)

v 7.1.10
  - Ignore submodules that are defined in .gitmodules but are checked in as directories. (Stan Hu)

v 7.1.9
  - Ignore invalid lines in .gitmodules. (Stan Hu)

v 7.1.8
  - Don't use git clone/fetch quiet flag since it's too new.

v 7.1.7
  - Add Repository#bare? method

v 7.1.6
  - Fix blob mode to return string rather than int.

v 7.1.5
  - Don't strip final newline of diff.

v 7.1.4
  - Fix nil blob mode (Sullivan Sénéchal)

v 7.1.3
  - Improve the to_patch and to_diff methods for merge commits